# cpp-gmock-example

./: .gitignore  BUILD.gn  CMakeLists.txt  README.md  Using-GN-build.pptx  my_lcov.py  ut_incremental_coverage_report.template
coverage/: .gitignore
src/: Board.cpp  Game.cpp
test/: CMakeLists.txt
