executable("game_demo") {
    sources = [
        "//src/main.cpp",
        ]
    include_dirs = [ "//include" ]
    deps =[
      ":game_static",
    ]
}

config("game_static_config"){
  include_dirs = [ "//include" ]
}

static_library("game_static"){
    sources = [
        "//src/Game.cpp",
        "//src/Board.cpp",
    ]
    include_dirs = [ "//include" ]
}

  group("all") {
    deps = [
       ":game_demo",
       ":game_unittest",
    ]
  }

executable("game_unittest") {
    sources = [
        "//test/main.cpp",
        "//test/BoardMock.h",
        "//test/BoardTest.cpp",
        "//test/GameTest.cpp",
        ]
    libs =["//lib/libgtest.a","//lib/libgmock.a"]
    include_dirs = [ "//include","include/ext", ]
    deps =[
      ":game_static",
    ]
}