group("all") {
    deps = [
       ":game_demo",
       ":game_unittest",
    ]
}

config("game_include_config"){
  include_dirs = [ "//include" ]
}

static_library("game_static"){
    sources = [
        "//src/Game.cpp",
        "//src/Board.cpp",
    ]
    public_configs = [ ":game_include_config" ]
}

executable("game_demo") {
    sources = [
        "//src/main.cpp",
    ]
    deps =[
      ":game_static",
    ]
}


config("gtest_include_config"){
  include_dirs = [ "//include/ext" ]
  libs =["//lib/libgtest.a","//lib/libgmock.a"]
}

executable("game_unittest") {
    sources = [
        "//test/main.cpp",
        "//test/BoardMock.h",
        "//test/BoardTest.cpp",
        "//test/GameTest.cpp",
        ]

    configs = [":gtest_include_config" ]
    deps =[
      ":game_static",
    ]
}